--- a/backend/frontend/login.css
+++ b/backend/frontend/login.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: rgb(250, 248, 248);
+    background-color: rgba(250, 248, 248, 0.842);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -60,11 +60,16 @@ form input, form button {
 }
 
 form button {
-    padding: 12px;
+    display: inline-block;
+    text-decoration: none;
     background-color: red;
-    color: white;
-    border: none;
-    border-radius: 5px;
+    color: white; /* White text */
+    padding: 15px 30px;
+    border-radius: 30px; /* Oval shape */
+    font-size: 18px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+    
 }
 
 form button:hover {
