--- a/backend/frontend/login.css
+++ b/backend/frontend/login.css
@@ -1,10 +1,11 @@
 /* General Styles for the Login and Register Forms */
 body {
     font-family: Arial, sans-serif;
+    background-color: #cecdcd;
+    display: flex;
+    flex-direction: column; /* Stack navbar and content vertically */
     margin: 0;
     padding: 0;
-    background-color: rgba(250, 248, 248, 0.842);
-    display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -15,7 +16,7 @@ body {
     max-width: 500px;
     width: 100%;
     padding: 20px;
-    background-color: rgb(250, 248, 248);
+    background-color: #cecdcd;
     border-radius: 10px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 }
