--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -62,7 +62,7 @@ body {
 /* Login/Register Button Styling */
 .login-register a {
     text-decoration: none;
-    background-color: grey;
+    background-color: red;
     color: white;
     padding: 12px 25px; /* Larger padding */
     border-radius: 30px;
@@ -91,8 +91,7 @@ body {
 .person-icon, .flag-icon {
     width: 50px;
     height: 50px;
-    background-color: white;
-    color:red;
+    background-color: #eee;
     border-radius: 50%;
     margin-left: 20px;
     overflow: hidden;
@@ -150,26 +149,6 @@ p {
     color: #555;
     margin-bottom: 30px;
 }
-#dynamic-content {
-    display: flex;
-    justify-content: center; /* Horizontal centering */
-    align-items: center; /* Vertical centering */
-    height: 100vh;  /* Full viewport height */
-    padding: 20px;
-    box-sizing: border-box;
-    flex-direction: column; /* Stack content vertically */
-}
-
-/* The quiz container itself */
-.quiz_container {
-    text-align: center;  /* Center the text */
-    max-width: 600px;  /* Limit the width */
-    width: 50% ; /* Allow it to be responsive */
-    padding: 20px;
-    border: 1px solid #ccc;  /* Optional border for styling */
-    border-radius: 8px;  /* Rounded corners */
-    background-color: #f9f9f9;  /* Light background color */
-}
 
 /* Start Quiz Button Styling */
 .start-quiz-btn {
@@ -190,9 +169,9 @@ p {
 
 /* Style for active navigation link */
 .nav-links a.active {
-    color: red; /* Or any color you want for active link */
-    font-weight: bold;
-    border-bottom: 2px solid red; /* Or any style you want */
+    color: red;
+    border-bottom: 2px solid red;
+    padding-bottom: 8px;
 }
 
 /* Optional: Active link hover effect */
