--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -121,7 +121,7 @@ body {
     height: auto;
     max-width: 800px; /* Limits the image size */
     border-radius: 10px;
-    padding: 120px 40px 40px 40px;
+    padding: 0px;
 }
 
 /* Text Styling */
@@ -156,7 +156,7 @@ p {
     align-items: center;
     text-align: center;
     height: 100vh;  /* Full viewport height */
-    padding: 120px 40px 40px 40px;
+    padding: 40px 40px 40px 40px;
     box-sizing: border-box;
 }
 
