--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -114,7 +114,6 @@ body {
 /* Image Styling */
 .image-container {
     flex: 1; /* Takes up 1/3 of the space */
-    padding: 40px 40px 40px 40px;
 }
 
 .image {
@@ -122,14 +121,14 @@ body {
     height: auto;
     max-width: 800px; /* Limits the image size */
     border-radius: 10px;
-    padding: 40px 40px 40px 40px;
+    padding: 0px;
 }
 
 /* Text Styling */
 .text-container {
     flex: 0.5; /* Takes up 2/3 of the space */
     max-width: 50%; /* Limit the max-width for better layout */
-    padding: 40px 40px 40px 40px;
+    padding: 0; /* Remove extra padding */
     display: flex; /* Use flexbox to align text vertically */
     flex-direction: column; /* Stack elements vertically */
     justify-content: center; /* Vertically center the content */
@@ -168,7 +167,7 @@ p {
     align-items: center;  
     text-align: center;      /* Center vertically */
     height: 100vh;             /* Full height of the viewport */
-    padding: 40px 40px 120px 40px;          /* Add padding around the content */
+    padding: 120px 40px 40px 40px;           /* Add padding around the content */
     box-sizing: border-box;    /* Include padding in width/height calculations */      /* Center text inside the container */
     background-color: #f5f5f5; /* Optional, just for visual contrast */
 }
