--- a/backend/frontend/canv.css
+++ b/backend/frontend/canv.css
@@ -119,6 +119,7 @@ body {
     align-items: center; /* Horizontally center the content */
     text-align: center; /* Center text */
     height: 100vh; /* Make sure it takes up the full viewport height */
+    overflow: auto; 
 }
 
 
